--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,8 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lab 2"
-        android:layout_gravity="center_horizontal"
-        android:textSize="50dp"/>
+        android:text="Hello World!"
+        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
